--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
 .navbar ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 20px;
 }
 
 .navbar ul li {
@@ -54,6 +54,9 @@ body {
 
 p {
     font-size: 16px;
+    padding:5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .hero {
@@ -83,12 +86,13 @@ p {
     margin-left: 25px;
     margin-right: 25px
 }
-
+/*Nested flex-container in .content and .benefits classes.*/
 .content {
     display:flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
     width: 75%;
+    min-width: 75%;
     margin: 20px;
     margin-top: 0%;
 }
@@ -111,28 +115,32 @@ p {
 }
 
 .search-engine-optimization h2,
-.online-reputation-management h2,
 .social-media-marketing h2 {
-    margin-bottom: 20px;
+    margin: 20px;
+    font-size: 36px;
+}
+.online-reputation-management h2 {
+    margin-left: 0;
     font-size: 36px;
 }
 
+/*Consolidated section benefits and made a .flex-container*/
 .benefits {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
     margin-right: 20px;
+    margin-bottom: 10px;
     padding: 20px;
-    clear: both;
-    float: right;
     width: 20%;
+    min-width: 20%;
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
     color: #ffffff;
 }
-
-    /*Consolidated section benefits*/
-.benefit-lead,
-.benefit-brand,
-.benefit-lead {
+.benefit-items {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -155,11 +163,11 @@ p {
     padding: 30px;
     clear:both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: none;
     font-size: 20px;
     position:fixed;
     color:#ffffff;
 }
 .footer .hide {
     display: block;
+    width: 100%;
 }
