--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@ body {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    padding-top: 15px;
     height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 5px;
 }
 
 .header h1 {
@@ -51,14 +51,14 @@ body {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*Added a flex container to paragraphs*/
 p {
     font-size: 16px;
     padding:5px;
     display: flex;
     flex-direction: column;
 }
-
+/*Made .hero a section*/
 .hero {
     height: 800px;
     width: 100%;
@@ -72,7 +72,6 @@ p {
 .flex-container {
     display:flex;
     justify-content: space-around;
-    align-items: flex-start;
     margin-right: 5px;
 }
 
@@ -90,7 +89,7 @@ p {
 .content {
     display:flex;
     flex-direction:column;
-    align-items: center;
+    align-items: left;
     width: 75%;
     min-width: 75%;
     margin: 20px;
@@ -115,26 +114,24 @@ p {
 }
 
 .search-engine-optimization h2,
-.social-media-marketing h2 {
-    margin: 20px;
-    font-size: 36px;
-}
+.social-media-marketing h2,
 .online-reputation-management h2 {
-    margin-left: 0;
+    margin: 0%;
     font-size: 36px;
 }
 
-/*Consolidated section benefits and made a .flex-container*/
+/*Consolidated section benefits, made a .flex-container, changed dimensions*/
 .benefits {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: left;
     margin-right: 20px;
     margin-bottom: 10px;
-    padding: 20px;
+    padding: 0px;
     width: 20%;
-    min-width: 20%;
+    min-width: 200px;
+    max-width: 20%;
     height: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
@@ -142,11 +139,14 @@ p {
 }
 .benefit-items {
     margin-bottom: 32px;
+    align-items: center;
     color: #ffffff;
+    padding: 5px;
 }
 
 .benefits h3 {
     margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -157,8 +157,8 @@ p {
     align-items: center;
 }
 
-/*Added .hide to footer as per mockup*/
-.hide {
+/* Footer hidden as per mockup*/
+.footer {
     text-align:center;
     padding: 30px;
     clear:both;
@@ -166,8 +166,4 @@ p {
     font-size: 20px;
     position:fixed;
     color:#ffffff;
-}
-.footer .hide {
-    display: block;
-    width: 100%;
 }
